syntax = "proto3";
package com.tecnico.lemon.contract;

message VehiclesReq {
}

message VehiclesResp {
  repeated Vehicle vehicles = 1;
}

message ReserveVehicleReq {
  int32 vehicle_id = 1;
}

message ReserveVehicleResp {

}

message UnlockVehicleReq {
  int32 vehicle_id = 1;
}

message UnlockVehicleResp {

}


message Vehicle {
  int32 vehicle_id = 1;
  string description = 2;
  string location =3;
  bool reserved = 4;
  int32 price = 5;
}

service VehicleTableService {
  rpc getVehicles(VehiclesReq) returns (VehiclesResp);
  rpc reserveVehicle(ReserveVehicleReq) returns (ReserveVehicleResp);
  rpc unlockVehicle(UnlockVehicleReq) returns (UnlockVehicleResp);
}
